--- a/resource/assets/zero_quest/lang/en_US.lang
+++ b/resource/assets/zero_quest/lang/en_US.lang
@@ -59,8 +59,10 @@ item.darkHoe.name=Dark Hoe
 item.nileBow.name=Nile Bow
 item.nileGun.name=Nile Gun
 
-item.zertumMeatRaw.name=Raw Zert Meat
-item.zertumMeatCooked.name=Cooked Zert Meat
+item.zertumMeatRaw.name=Raw Zertum Meat
+item.zertumMeatCooked.name=Cooked Zertum Meat
+item.jakanMeatRaw.name=Raw Jakan Meat
+item.jakanMeatCooked.name=Cooked Jakan Meat
 item.entityEgg.name=Spawn
 item.vitoidSeed.name=Vitoid Seed
 item.vitoidFruit.name=Vitoid Fruit
