--- a/src/main/resources/assets/zero_quest/lang/en_US.lang
+++ b/src/main/resources/assets/zero_quest/lang/en_US.lang
@@ -16,6 +16,8 @@ gui.config.property.DarkElements=Dark Elements
 gui.config.property.DarkElements.tooltip=Toggles the Dark Elemental Load
 gui.config.property.Healing=Healing
 gui.config.property.Healing.tooltip=Toggles the Healing ability of ALL Zero Quest tameable creatures
+gui.config.property.SnowStep=Snow Footprints
+gui.config.property.SnowStep.tooltip=Toggles the snow/ice footprints of Ice Zertums
 
 tile.nileBlueFlower.name=Nile Blue Flower
 tile.nileBlackFlower.name=Nile Black Flower
