Almost Done with 1.8 update!

--- a/src/main/resources/assets/zero_quest/lang/en_US.lang
+++ b/src/main/resources/assets/zero_quest/lang/en_US.lang
@@ -33,11 +33,6 @@ tile.looseBedrock.name=Loose Bedrock
 tile.portalNillax.name=Nillax Portal
 tile.nileWorktable.name=Nile Crafting Table
 tile.nileFire.name=Nile Fire
-tile.acid.name=Acid
-tile.nili.name=Nili 
-tile.nileStoneSlab.name=Nile Stone Slab
-tile.nileCobblestoneSlab.name=Nile Cobblestone Slab
-tile.looseBedrockSlab.name=Loose Bedrock Slab
 
 tile.darkaxFire.name=Darkax Fire
 tile.darkaxStone.name=Darkax Stone
@@ -63,12 +58,6 @@ item.toy0.name=Toy
 item.toy1.name=Drool Toy
 item.nileSpark.name=Nile Spark
 item.nileBone.name=Nile Bone
-item.nileDarkBone.name=Dark Nile Bone
-item.nileSaddle.name=Nile Saddle
-item.nileHelmet.name=Nile Helmet
-item.nileChest.name=Nile Chestplate
-item.nileLegs.name=Nile Leggings
-item.nileBoots.name=Nile Boots
 item.nileGrenade.name=Nile Grenade
 
 item.nileSword.name=Nile Sword
@@ -76,14 +65,15 @@ item.nileAxe.name=Nile Axe
 item.nilePickaxe.name=Nile Pickaxe
 item.nileShovel.name=Nile Shovel
 item.nileHoe.name=Nile Hoe
+item.nileBow.name=Nile Bow
 item.darkSword.name=Dark Sword
 item.darkAxe.name=Dark Axe
 item.darkPickaxe.name=Dark Pickaxe
 item.darkShovel.name=Dark Shovel
 item.darkHoe.name=Dark Hoe
 item.darkSpark.name=Dark Spark
-item.nileBow.name=Nile Bow
-item.nileGun.name=Nile Gun
+item.darkBone.name=Dark Bone
+item.darkBow.name=Dark Bow
 
 item.zertumMeatRaw.name=Raw Zertum Meat
 item.zertumMeatCooked.name=Cooked Zertum Meat
