--- a/src/main/resources/assets/zero_quest/lang/en_US.lang
+++ b/src/main/resources/assets/zero_quest/lang/en_US.lang
@@ -22,6 +22,8 @@ gui.config.property.SnowStep=Snow Footprints
 gui.config.property.SnowStep.tooltip=Toggles the snow/ice footprints of Ice Zertums
 gui.config.property.GrassStep=Grass Footprints
 gui.config.property.GrassStep.tooltip=Toggles the grass footprints of Foris Zertums
+gui.config.property.Howl=Howl
+gui.config.property.Howl.tooltip=Toggles the howling function on Zertums
 
 tile.nileBlueFlower.name=Nile Blue Flower
 tile.nileBlackFlower.name=Nile Black Flower
@@ -106,9 +108,11 @@ entity.zero_quest.DarkZertum.name=Dark Zertum
 entity.zero_quest.DestroZertum.name=Destro Zertum
 entity.zero_quest.IceZertum.name=Ice Zertum
 entity.zero_quest.ForisZertum.name=Foris Zertum
+entity.zero_quest.MetalZertum.name=Metal Zertum
 entity.zero_quest.Jakan.name=Jakan
 entity.zero_quest.Kurr.name=Kurr
 entity.zero_quest.Kortor.name=Kortor
+entity.zero_quest.Riggator.name=Riggator
 entity.zero_quest.FPoisonball.name= Flaming Poisonball
 entity.zero_quest.nileGrenade.name=Nile Grenade
 entity.zero_quest.Iceball.name=Iceball
@@ -119,9 +123,11 @@ zero_quest.DarkZertum.name=Dark Zertum
 zero_quest.DestroZertum.name=Destro Zertum
 zero_quest.IceZertum.name=Ice Zertum
 zero_quest.ForisZertum.name=Foris Zertum
+zero_quest.MetalZertum.name=Metal Zertum
 zero_quest.Jakan.name=Jakan
 zero_quest.Kurr.name=Kurr
 zero_quest.Kortor.name=Kortor
+zero_quest.Riggator.name=Riggator
 zero_quest.FPoisonball.name= Flaming Poisonball
 zero_quest.nileGrenade.name=Nile Grenade
 zero_quest.Iceball.name=Iceball
