More Changes! Getting ready to release v1.5.0

--- a/src/main/resources/assets/zero_quest/lang/en_US.lang
+++ b/src/main/resources/assets/zero_quest/lang/en_US.lang
@@ -61,7 +61,7 @@ gui.talentinfo.lightfall=Every level allows your Zertum fall 3 more blocks befor
 gui.talentname.locationtracker=Location Tracker
 gui.talentinfo.locationtracker=While a Zertum with this skill is on your head, your bed will be highlighted in a black outline. To get the dog on you head right click on him with a bone in hand. The range at which it can do this is equal to 200 blocks per level, but becomes infinite at level 5.
 gui.talentname.mount=Mount
-gui.talentinfo.mount=Allows you to ride your Zertum anywhere with speed. Every level allows your dog to jump higher. To get on your Zertum, have an empty hand and jump and click on it to get on it.
+gui.talentinfo.mount=Allows you to ride your Zertum anywhere with speed. Every level allows your dog to jump higher. To get on your Zertum, equip a saddle on it's back, then have an empty hand and jump and click on it to get on it.
 gui.talentname.rapidregen=Rapid Regeneration
 gui.talentinfo.rapidregen=Improves your Zertum's regeneration rate without needing to rest. Mastering the skill will heal your Zertum 50% faster when sitting.
 gui.talentname.roundup=Round Up
