--- a/src/main/resources/assets/zero_quest/lang/en_US.lang
+++ b/src/main/resources/assets/zero_quest/lang/en_US.lang
@@ -75,7 +75,7 @@ bit.levelup=Level up!
 bit.tooyoung=This Zertum a bit too young to be learning skills just yet.
 bit.leveltoohigh=Your Zertum is too high level to gain anything from these bits.
 bit.toomuch=Your Zertum can't possibly handle the power contained in these bits.
-bit.ultimatelevel=CONGRATULATIONS! Your Zertums has reached the Alpha Level!
+bit.ultimatelevel=CONGRATULATIONS! Your Zertum has reached the Alpha Level! Your Zertum is ready for evolution!
 
 tile.nileBlueFlower.name=Nile Blue Flower
 tile.nileBlackFlower.name=Nile Black Flower
@@ -143,6 +143,7 @@ item.microBit.name=Micro Bit
 item.megaBit.name=Mega Bit
 item.omegaBit.name=Omega Bit
 item.alphaBit.name=Alpha Bit
+item.evoBit.name=Evo Bit
 
 item.FPoisonball.name=Flaming Poisonball
 
