--- a/src/main/resources/assets/zero_quest/lang/en_US.lang
+++ b/src/main/resources/assets/zero_quest/lang/en_US.lang
@@ -34,24 +34,28 @@ modeinfo.wandering=In this mode, your Zertum so stay near it's bowl and wait for
 modeinfo.tactical=In this mode, your Zertum will follow you but will not attack anything unless you use the command beam.
 modeinfo.aggresive=In this mode, your Zertum will follow you and attack anything that attacks you or that you attack.
 modeinfo.berserker=In this mode, your Zertum will follow you and if any mob draws near, it will attack it without warning.
-modeinfo.docile=In this mode, your Zertum will follow you but not attack anything. It is ready for you to throw the bone.
+modeinfo.docile=In this mode, your Zertum will follow you but not attack anything. It is ready for you to throw the toy.
 
 gui.talentname.blastresist=Blast Resistance
 gui.talentinfo.blastresist=§c[METAL ZERTUMS ONLY]§r Allows your Metal Zertum to take less damage from any explosions. The higher the level, the more resistant your Metal Zertum is.
 gui.talentname.bodymuncher=Body Muncher
-gui.talentinfo.bodymuncher=Increases the NP your Zertum gets from food items by 10% per level. In addition, level 3 lets your dog eat rotten flesh, and level 5 lets your dog eat fish. Foris Zertums will be able to eat fruit at level 1
+gui.talentinfo.bodymuncher=Increases the NP your Zertum gets from food items by 10% per level. In addition, level 3 lets your dog eat rotten flesh, and level 5 lets your dog eat fish. Foris Zertums will be able to eat fruit at level 1 and Dark Zertums will be able to eat Kurr Seeds at level 1
 gui.talentname.creeperspotter=Creeper Spotter
 gui.talentinfo.creeperspotter=A Zertum with this skill can sense creepers in the area and it will growl to warn you. The range at which your dog can detect creepers increases by 6 blocks per level, and mastering this skill will make your Zertum capable of attacking creepers and reset the creeper's detonation timer with each attack.
 gui.talentname.criticalclaw=Critical Claw
 gui.talentinfo.criticalclaw=Improves critical hit rate, 1/2 a heart for every level plus an extra heart when you master it
 gui.talentname.dasher=Dasher
 gui.talentinfo.dasher=Increases your Zertum's movement speed while chasing a target and while being ridden. Every level grants a 12% increase, and mastering it grants an additional 15% increase
+gui.talentname.deatheningroar=Deathening Roar
+gui.talentinfo.deatheningroar=§c[EVOLVED ZERTUMS ONLY]§r Equip a bone in hand and command the Zertum to unleash a powerful roar and inflict 1 point of damage and knocks back all nearby mobs (expect for slimes) for a cooldown of 50 ticks. Each level increases the range by 3 blocks and increases the damage and knockback by 1. Mastering the skill doubles the damage, gives a very far range, strongest knockback and reduces the cooldown to 20 ticks.
 gui.talentname.fire=Fire Zertum
 gui.talentinfo.fire=§c[RED ZERTUMS ONLY]§r Allows your Red Zertum set things on fire while attacking. The higher the level, the longer the fire lasts. Mastering the skill grants your Red Zertum immunity to fire
 gui.talentname.fishing=Fishing
 gui.talentinfo.fishing=Whenever your Zertum enters the water, it may catch a fish which it will give to you when it shakes itself dry. The chance of catching a fish increases with level, and any points in Fire Zertum may cause the fish to be pre-cooked. Mastering this skill lets your Zertum breathe underwater.
 gui.talentname.guardianangel=Guardian
 gui.talentinfo.guardianangel=Increases the chance that your Zertum will completely block a physical attack.
+gui.talentname.hardenedice=Hardened Ice
+gui.talentinfo.hardenedice=§c[ICE ZERTUMS ONLY]§r Reinforces the Ice Zertum's body to resist the heat of hot environments. Mastery level (level 5) will make your Ice Zertum invulnerable to heat damage, including the Red Zertum's fire attacks
 gui.talentname.hunter=Hunter
 gui.talentinfo.hunter=Every level grants a 10% chance to make anything your Zertums kills drop its loot 2 times. Level 5 grants an extra 10%, bringing it up to a 60% chance
 gui.talentname.lifegiver=Life Giver
@@ -62,12 +66,14 @@ gui.talentname.locationtracker=Location Tracker
 gui.talentinfo.locationtracker=While a Zertum with this skill is on your head, your bed will be highlighted in a black outline. To get the dog on you head right click on him with a bone in hand. The range at which it can do this is equal to 200 blocks per level, but becomes infinite at level 5.
 gui.talentname.mount=Mount
 gui.talentinfo.mount=Allows you to ride your Zertum anywhere with speed. Every level allows your dog to jump higher. To get on your Zertum, equip a saddle on it's back, then have an empty hand and jump and click on it to get on it.
+gui.talentname.pestslayer=Pest Slayer
+gui.talentinfo.pestslayer=Inflicts 1 point of damage on all nearby Silverfish or Slimes at random. Each level increases the range by 3 blocks and mastering the skill doubles the damage.
 gui.talentname.rapidregen=Rapid Regeneration
 gui.talentinfo.rapidregen=Improves your Zertum's regeneration rate without needing to rest. Mastering the skill will heal your Zertum 50% faster when sitting.
 gui.talentname.roundup=Round Up
-gui.talentinfo.roundup=Put some wheat in your hand, and any trained Zertums will immediately rustle up some nearby livestock and carry them for you making it easier to transport livestock long distances. This is quite tiring though, and costs a lot of nourishment. The cost is reduced with higher levels in the skill. To have your Zertum drop the animal, simply don't hold wheat.
-gui.talentname.pestslayer=Pest Slayer
-gui.talentinfo.pestslayer=Inflicts 1 point of damage on all nearby Silverfish or Slimes at random. Each level increases the range by 3 blocks and mastering the skill doubles the damage.
+gui.talentinfo.roundup=Put some wheat in your hand, and your trained Zertums will immediately pick up some nearby livestock and carry them for you making it easier to transport livestock long distances. This is quite tiring though, and costs a lot of nourishment. The cost is reduced with higher levels in the skill. To have your Zertum drop the animal, simply don't hold wheat.
+gui.talentname.scorchingfire=Scorching Fire
+gui.talentinfo.scorchingfire=§c[RED ZERTUMS ONLY]§r Reinforces the Red Zertum's body to resist damage from water. Mastery level (level 5) will make your Red Zertum invulnerable to water damage
 gui.talentname.
 gui.talentinfo.
 
