--- a/changelog.txt
+++ b/changelog.txt
@@ -184,18 +184,21 @@ v1.6.0 - Evolution for Zertums and Even More Fixes! Portal Revival!!
 ~Adjusted heal cost for Life Giver talent to 40 ticks at level 5!
 -Players can no longer respawn in the Nillax Dimension
 
-v1.7.0 - Gender addition and Bug Fixes!
+v1.7.0 - Realstic Breeding and Bug Fixes!
 +Added tame status
 +Added Genders to all tameable creatures
 +Added State command (with evolve and devolve commands)
 +Added Gender command
 +Added all to global parameter
-+Added Mod Checker configuration
++Added Mod Version Checker configuration to toggle mod version checker
++Dark Zertums can now turn Zertums into Dark Zertums
 *Nile and Dark Fire can now be extinguished!
-*Simplified more code!
-*Changed Nile Crafting Table item texture
-*^Renamed Textures:^
+*Simplified code again!
+#Changed Nile Crafting Table item texture
+#^Renamed Textures:^
     *niletable to nileTable in the gui textures
     *nileWorktable to nileTable in the model textures
+#Life Giver heal costs is now 95
+#Heal command now refills the hunger for Zertums and tells who is healed
 ~Fixed Server errors relating with Darkax Portals
 ~Fixed bug with mounting on Jakans and Kortors
